# trading-project

./: .codex_macro_patch.diff  .cursorignore  .cursorindexingignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Errorhandling.txt  FUSION_NOTES.md  GEMINI.md  README.md  README_TRADING_PLATFORM.md  biome.json  bun.lockb  check-gct.ps1  check-ports.ps1  check-syntax.ps1  docker-compose.data.yml  docker-compose.garage.yml  docker-compose.nats.yml  docker-compose.otel.yml  docker-compose.seaweedfs.yml  e2e_full.py  e2e_runner.py  flight.trace  gitnexus.md  kill-stack-ports.ps1  knip.config.ts  launch_e2e.py  lefthook.yml  next.config.ts  otel-collector.yaml  package.json  playwright.config.ts  review.md  tailwind.config.ts  test-rust-block.ps1  tsconfig.json
python-backend/: .env.example  README.md  embeddings.md  pyproject-313t.toml  pyproject.toml  pyrightconfig.json
python-backend/archive/ml_ai/agent/: search.py  working_memory.py
python-backend/archive/ml_ai/context/: __init__.py
python-backend/archive/ml_ai/geopolitical_soft_signals/: pipeline.py
python-backend/archive/ml_ai/indicator_engine/: pipeline.py  portfolio_analytics.py  rust_bridge.py
python-backend/archive/ml_ai/memory_engine/: __init__.py  episodic_store.py  kg_store.py  vector_store.py
python-backend/archive/python-compute/: pipeline.py
python-backend/archive/python-compute/tests_old/: test_ichimoku.py  test_new_indicators.py  (+6 more)
python-backend/data/: kuzu.db.wal
python-backend/ml_ai/agent/: __init__.py  context_assembler.py  memory_client.py
python-backend/ml_ai/geopolitical_soft_signals/: __init__.py  game_theory.py  pipeline.py
python-backend/ml_ai/indicator_engine/: pipeline.py  portfolio_analytics.py
python-backend/ml_ai/memory_engine/: kg_store.py  vector_store.py
python-backend/proto/: __init__.py
python-backend/proto/ipc/: __init__.py  ipc_pb2.py  ipc_pb2_grpc.py
python-backend/python-agent/: README.md  pyproject.toml
python-backend/python-agent/agent/: app.py  context.py  context_assembler.py  errors.py  extensions.py  guards.py  http_client.py  loop.py  memory_client.py  roles.py  search.py  streaming.py  working_memory.py
python-backend/python-agent/context/: __init__.py  merge.py  relevance.py  token_budget.py
python-backend/python-agent/memory/: app.py
python-backend/python-agent/memory_engine/: kg_store.py  models.py  seed_data.py  vector_store.py
python-backend/python-agent/scripts/: smoke_falkordb.py  smoke_pgvector.py
python-backend/python-agent/tests/: test_memory_kg_store.py  test_memory_vector_store.py
python-backend/python-agent/tradeview_fusion_python_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-backend/python-compute/: README.md  pyproject.toml
python-backend/python-compute/finance-bridge/: README.md  app.py
python-backend/python-compute/geopolitical-soft-signals/: README.md  app.py
python-backend/python-compute/geopolitical_soft_signals/: __init__.py  game_theory.py  pipeline.py
python-backend/python-compute/indicator-service/: README.md  app.py
python-backend/python-compute/indicator_engine/: __init__.py  app.py  backtest.py  derivatives.py  helpers.py  models.py  oscillators.py  patterns.py  pipeline.py  portfolio.py  portfolio_analytics.py  quant.py  rainbow.py  regime_weighting.py  rust_bridge.py  trend.py  volatility.py  volume.py
python-backend/python-compute/scripts/: generate_grpc_stubs.py  smoke-indicator-service.ps1  smoke-soft-signals.py
python-backend/python-compute/tests/: conftest.py  test_backtest.py  test_conftest_smoke.py  test_derivatives.py  test_gap_pattern.py  test_ks_collection.py  test_oscillators.py  test_patterns.py  test_phase15.py  test_phase15_16_20.py  test_phase18.py  test_phase2_finance_bridge_cache.py  test_phase9_ingest_classifier.py  test_portfolio.py  test_pyo3_gil_release.py  test_quant.py  test_rainbow.py  test_rainbow_collection.py  test_regime_weighting.py  test_trend.py  test_volatility.py  test_volume.py
python-backend/python-compute/tradeview_fusion_python_compute.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-backend/python-ingest-workers/: README.md  pyproject.toml
python-backend/python-ingest-workers/tradeview_fusion_python_ingest_workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-backend/rust_core/: Cargo.toml  pyproject.toml
python-backend/rust_core/src/: config.rs  error.rs  helper.rs  lib.rs  ohlcv_cache.rs
python-backend/rust_core/target-local/: .rustc_info.json
python-backend/scripts/: bench_server.py  dev-with-python-services.ps1  maturin_rebuild.py  rebuild-rust-core.ps1  smoke-indicator-service.py  smoke-soft-signals.ps1  smoke-soft-signals.py
python-backend/services/: README.md
python-backend/services/_shared/: app_factory.py  cache_adapter.py  grpc_server.py  ipc_servicer.py  ipc_servicer_async.py
python-backend/services/agent-service/: app.py
python-backend/services/finance-bridge/: app.py
python-backend/services/geopolitical-soft-signals/: README.md  app.py
python-backend/services/indicator-service/: README.md  app.py
python-backend/services/memory-service/: app.py
python-backend/shared/: __init__.py  app_factory.py  cache_adapter.py  config.py  grpc_server.py  ipc_servicer.py  ipc_servicer_async.py
python-backend/tests/: test_ichimoku.py  test_ipc_grpc.py  test_new_indicators.py  test_otel_factory.py  test_phase13.py  test_phase15.py  test_phase15_16_20.py  test_phase17_game_theory.py  test_phase18.py  test_phase2_finance_bridge_cache.py  test_phase2_rust_composite.py  test_phase7_indicators.py  test_phase8_patterns.py  test_phase9_ingest_classifier.py  test_pyo3_gil_release.py
python-backend/tradeview_fusion_python_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-backend/typings/: hdbscan.pyi  tradeviewfusion_rust_core.pyi
python-backend/typings/hmmlearn/: hmm.pyi
python-backend/typings/ipc/: ipc_pb2.pyi
python-backend/typings/tradeviewfusion_rust_core/: __init__.pyi
python-backend/typings/yfinance/: __init__.pyi
(+1967 files in other folders)
