[project]
name = "tradeview-fusion-python-backend"
version = "0.1.0"
description = "Optional Python backend services for Tradeview Fusion"
requires-python = ">=3.11"
dependencies = [
    "basedpyright>=1.34.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "maturin>=1.7,<2",
    "polars[rtcompat]>=1.38.1",
    "python-dotenv==1.0.1",
    "pytest>=8.3",
    "ruff>=0.13.0",
    "scipy>=1.14.0",
    "uvicorn==0.35.0",
    "yfinance==0.2.65",
    "pandas-stubs>=3.0.0.260204",
    "scipy-stubs>=1.17.1.0",
    "scikit-learn-stubs>=0.0.3",
]

[project.optional-dependencies]
ml = [
    "numpy==2.2.2",
    "scikit-learn==1.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".venv",
    ".venv/**",
    "**/.venv/**",
]
