[project]
name = "tradeview-fusion-python-backend"
version = "0.1.0"
description = "Optional Python backend services for Tradeview Fusion"
requires-python = ">=3.11"
dependencies = [
    "basedpyright>=1.34.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "maturin>=1.7,<2",
    "polars[rtcompat]>=1.38.1",
    "python-dotenv==1.0.1",
    "pytest>=8.3",
    "ruff>=0.13.0",
    "scipy>=1.14.0",
    "uvicorn==0.42.0",
    # python_runtime_eval_delta: Granian (Rust/Tokio ASGI server, drop-in for uvicorn)
    # eval GRN.V1-V4 before Phase 20 rollout decision. Pin loosely for eval flexibility.
    "granian>=2.0.0",
    "yfinance==0.2.65",
    "pandas-stubs>=3.0.0.260204",
    "scipy-stubs>=1.17.1.0",
    "scikit-learn-stubs>=0.0.3",
    # Phase 6a: Cache adapter
    "cachetools>=5.3.0",
    "redis>=5.0.0",
    # pandas: explicit dep (was only transitive via yfinance — not reliable)
    "pandas>=2.2.0",
    # Phase 15b: Volatility Suite (numpy available via scipy; explicit for clarity)
    "numpy>=2.0.0",
    # Phase 15c: Regime Detection
    "hmmlearn>=0.3.0",
    # Phase 12a: NLP Embedding Clustering
    "hdbscan>=0.8.33",
    # Phase 6c: KG store
    "kuzu>=0.7.0",
    # Phase 6d: Vector store
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Go <-> Python IPC (gRPC)
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",
    "tradeviewfusion-rust-core",
    # Phase 0e: OpenTelemetry (opt-in via OTEL_ENABLED=true)
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    # HTTP transport tracing — provider-agnostic (traces any outbound httpx call,
    # regardless of target: LLM APIs, REST, internal services).
    "opentelemetry-instrumentation-httpx>=0.50b0",
    # Anthropic-specific gen_ai.* spans (OpenLLMetry instrumentor, SOTA 2026).
    # Adds token counts, model name, finish_reason ON TOP of the httpx span.
    "opentelemetry-instrumentation-anthropic>=0.51.0",
]

[project.optional-dependencies]
ml = [
    "numpy==2.2.2",
    "scikit-learn==1.6.1",
]
# python_runtime_eval_delta: load testing tools for GRN.V1/PY3.V2 benchmarks
eval = [
    "locust>=2.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".venv",
    ".venv/**",
    "**/.venv/**",
]

[tool.uv.sources]
tradeviewfusion-rust-core = { path = "rust_core" }
