[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["indicator_engine*", "geopolitical_soft_signals*"]

[project]
name = "tradeview-fusion-python-compute"
version = "0.1.0"
description = "Python Compute Plane — Indicator Engine, Finance Bridge, Soft Signals (ports 8092, 8081, 8091)"
requires-python = ">=3.11"
dependencies = [
    # ── HTTP framework ──────────────────────────────────────────────────────
    "fastapi==0.116.1",
    "pydantic>=2.0",
    "uvicorn==0.35.0",
    "granian>=2.0.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    # ── Data / Compute ──────────────────────────────────────────────────────
    "polars[rtcompat]>=1.38.1",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.3.0",
    "yfinance==0.2.65",
    # ── ML / Indicators ─────────────────────────────────────────────────────
    "hmmlearn>=0.3.0",
    "hdbscan>=0.8.33",
    # ── Cache ───────────────────────────────────────────────────────────────
    "cachetools>=5.3.0",
    "redis>=5.0.0",
    # ── gRPC (Go <-> Python compute, Phase 19-20) ───────────────────────────
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",
    # ── Rust extension ──────────────────────────────────────────────────────
    # tradeviewfusion-rust-core is declared in root workspace and resolved
    # transitively via tradeview-fusion-python-backend. No duplicate needed.
    # ── OTel ────────────────────────────────────────────────────────────────
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-httpx>=0.50b0",

    # ── Shared workspace packages ────────────────────────────────────────────
    "tradeview-fusion-python-backend",
]

[project.optional-dependencies]
ml = [
    "scikit-learn==1.6.1",
]
# Dev tools (ruff, ty, basedpyright, pytest) kommen aus Root-Workspace via shared venv.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # makes indicator_engine.* and geopolitical_soft_signals.* importable

[tool.uv.sources]
tradeview-fusion-python-backend = { workspace = true }

[tool.ruff]
exclude = [".venv", ".venv/**", "**/.venv/**"]
